@@ -83,7 +83,6 @@ angular.module('sql', [])
       var baseURI = $location.protocol() + "://" + $location.host() + ":" + $location.port();
       if (localStorage.getItem("crate.base_uri") != null) {
         baseURI = localStorage.getItem("crate.base_uri");
-        $log.debug("Loaded base_uri '" + baseURI + "' from cookie");
       }
       $http.post(baseURI+"/_sql", data).
         success(function(data, status, headers, config) {
