@@ -396,3 +396,7 @@ form {
 .inline-block {
   display: inline-block;
 }
+
+.margin-left-5 {
+  margin-left: 5px;
+}
