@@ -17,11 +17,19 @@
           <form role="form">
             <div class="form-group">
               <label>Enter a select statement to query Crate</label>
-              <textarea ng-model="statement" class="form-control" rows="3" placeholder="select * from demo limit 100;"></textarea>
+              <textarea id="console-statement-input" ng-keydown="stmtKeyDown($event)" ng-model="statement" class="form-control" rows="3" placeholder="select * from demo limit 100;" ng-change="stmtChange()"></textarea>
             </div>
-            <button ng-click="execute()" type="submit" class="btn btn-default pull-right ladda-button" data-style="expand-left">Execute Query</button>
+            <div class="form-inline">
+              <div class="checkbox pull-left">
+                <input type="checkbox" ng-model="useLocalStorage" ng-change="storeInLocalStorageChanged()"> Store executed queries in local storage
+              </div>
+              <button ng-click="clearLocalStorage()" class="btn btn-default btn-xs pull-left margin-left-5">Reset</button>
+              <button ng-click="execute()" type="submit" class="btn btn-default pull-right ladda-button" data-style="expand-left">Execute Query</button>
+            </div>
           </form>
-          <label class="pull-left">{{ status }}</label>
+        </div>
+        <div class="col-lg-12">
+          <label>{{ status }}</label>
         </div>
       </div>
 
